--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "node-cron": "^4.2.1",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
