shopify product excel v1

--- a/backend/env.example
+++ b/backend/env.example
@@ -20,3 +20,5 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000 
+SHOPIFY_PRODUCTS_API_URL=https://seq5t1-mz.myshopify.com/admin/api/2025-07/graphql.json
+SHOPIFY_ACCESS_TOKEN=your-shopify-access-token-here 
