--- a/backend/package.json
+++ b/backend/package.json
@@ -9,25 +9,30 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "xlsx": "^0.18.5",
-    "axios": "^1.6.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "morgan": "^1.10.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
-  "keywords": ["nodejs", "express", "authentication", "excel-database"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "authentication",
+    "excel-database"
+  ],
   "author": "Clamio Team",
   "license": "MIT"
-} 
+}
