--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cron": "^4.3.2",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
