--- a/backend/env.example
+++ b/backend/env.example
@@ -11,7 +11,9 @@ DB_FILE_PATH=./data/users.xlsx
 
 # Shipway API Configuration
 SHIPWAY_API_BASE_URL=https://app.shipway.com/api
-SHIPWAY_API_KEY=your-shipway-api-key
+SHIPWAY_BASIC_AUTH_HEADER=Basic your-base64-encoded-credentials
+SHIPWAY_USERNAME=your-shipway-username
+SHIPWAY_PASSWORD=your-shipway-password
 
 # Security
 BCRYPT_ROUNDS=12
