--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
+    "node-fetch": "^2.7.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
