--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "node-cron": "^4.2.1",
+    "node-fetch": "^2.7.0",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
