--- a/backend/.env
+++ b/backend/.env
@@ -23,3 +23,9 @@ CORS_ORIGIN=http://localhost:3000
 
 SHOPIFY_PRODUCTS_API_URL=https://seq5t1-mz.myshopify.com/admin/api/2025-07/graphql.json
 SHOPIFY_ACCESS_TOKEN=your-shopify-access-token-here
+
+# Database Configuration
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=your_mysql_password
+DB_NAME=clamio_v3
