--- a/backend/env.example
+++ b/backend/env.example
@@ -7,6 +7,10 @@ NODE_ENV=development
 # No JWT secret needed for Basic Auth
 
 # Database Configuration
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=clamio_v3
 DB_FILE_PATH=./data/users.xlsx
 
 # Shipway API Configuration
