--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ frontend/.env.local
 frontend/.env.development.local
 frontend/.env.test.local
 frontend/.env.production.local
+backend/data/raw_shipway_orders.json
 
 # Build outputs
 dist/
