--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start -p ${PORT:-3000}",
+    "generate-icons": "node generate-icons.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -46,6 +47,7 @@
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "latest",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
@@ -67,6 +69,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
