--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "next build --webpack",
-    "dev": "next dev -p 3000 --webpack",
+    "dev": "next dev -p 3000",
     "lint": "next lint",
     "start": "next start -p ${PORT:-3000}",
     "generate-icons": "node generate-icons.js"
