Keval: Updated Shipway Status

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CLAIMIO - Striker Store",
+  "name": "CLAIMIO",
   "short_name": "CLAIMIO",
   "description": "Self-service vendor portal for managing Shopify orders",
   "start_url": "/?source=pwa",
